--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,9 @@ html, body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 70px;
 }
+
+button {
+    font-size: 1.3rem;
+    margin-right: 10px;
+    padding: 10px;
+}
